@@ -1,0 +1,52 @@
+# Copyright 2011 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+load_lib dwarf.exp
+
+# This test can only be run on targets which support DWARF-2 and use gas.
+if {![dwarf2_support]} {
+    return 0   
+}
+
+set testfile "dw2-op-stack-value"
+set srcfile ${testfile}.S
+set executable ${testfile}.x
+
+if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${objdir}/${subdir}/${executable}" object {nodebug}] != "" } {
+    return -1
+}
+
+clean_restart $executable
+
+gdb_test "p/x stack2" " = 0x1"
+gdb_test "p/x stack8" " = 0x1"
+
+set test "x/wx &aa551234"
+gdb_test_multiple $test $test {
+    -re ":\[ \t\]*0x341255aa\r\n$gdb_prompt $" {
+	# little endian
+	pass $test
+	gdb_test "p/x implicit4to2" " = 0x2211"
+	gdb_test "p/x implicit4to4" " = 0x44332211"
+    }
+    -re ":\[ \t\]*0xaa551234\r\n$gdb_prompt $" {
+	# big endian
+	pass $test
+	gdb_test "p/x implicit4to2" " = 0x3344"
+	gdb_test "p/x implicit4to4" " = 0x11223344"
+    }
+    -re ":\[ \t\]*0x\[0-9a-f\]{8}\r\n$gdb_prompt $" {
+	unsupported $test
+    }
+}
