@@ -1,5 +1,10 @@
 2011-08-08  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* gdb.dwarf2/dw2-op-stack-value.S: New file.
+	* gdb.dwarf2/dw2-op-stack-value.exp: New file.
+
+2011-08-08  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* gdb.dwarf2/dw2-simple-locdesc.S: Replace .value by .2byte.
 	* gdb.dwarf2/dw2-case-insensitive.exp (regexp case-sensitive off)
 	(p fuNC_symtab): Permit also ppc64 leading dot.
